2005-01-03  Dan Winship  <danw@novell.com>

	* configure.in: Remove redundant check for ngettext, since
	AM_GLIB_GNU_GETTEXT already checks for it (in both libc and
	libintl)._

2005-01-03  Sebastien Bacher  <seb128@debian.org>

	* libkbdraw/Makefile.am: 
	patch from Marco Pesenti Gritti <marco@gnome.org> 
	to fix the build out of the source dir (Closes: #158333).

2004-12-31  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in: Bump libxklavier requirement to 1.14

2004-12-20  Sebastien Bacher  <seb128@debian.org>

	* configure.in: post release bump to 2.9.4.

Mon Dec 20 16:52:47 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: release 2.9.3

2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.

2004-12-08  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in: Bump libxklavier requirement to 1.13

2004-11-28  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

2004-11-28  James Henstridge  <james@jamesh.id.au>

	* vfs-methods/themus/themus-properties-main.c: use GNOMELOCALEDIR.

	* vfs-methods/themus/Makefile.am: similar changes to the fontilus
	ones.

	* vfs-methods/fontilus/fontilus-context-menu.c: same here.

	* vfs-methods/fontilus/font-view.c: use GNOMELOCALEDIR rather than
	FONTILUS_LOCALEDIR in the bindtextdomain() call, to match the rest
	of gnome-control-center.

	* vfs-methods/fontilus/Makefile.am: similar schema and desktop
	file fixes.  Don't include the old mime files in the dist.

	* schemas/Makefile.am: remove .schemas files on clean, when
	installing schemas, look for them in builddir rather than srcdir.

	* gnome-settings-daemon/actions/Makefile.am: fix up build rules so
	that ALSA_CFLAGS isn't defined multiple times (use the newer
	automake += syntax).

	* control-center/Makefile.am: distribute $(icon_DATA).

	* capplets/*/Makefile.am: put the .desktop and .desktop.in files
	in CLEANFILES.  The .desktop.in.in file gets included because it