@@ -2,6 +2,7 @@
 - don't set "close" as the default button (Closes: #98202).
 - use a temporary filename to not overwrite existant files in ~/.themes
 (Closes: #97180).
+- theme-thumbnailer doesn't require an absolute path (Closes: #153203).
 - some bugs and leaks fixed.
 
 gnome-control-center 2.9.3
