@@ -1,3 +1,9 @@
+2005-01-04  Shakti Sen <shprasad@novell.com>
+
+	* theme-thumbnailer.c (main): Added the full path of the theme
+	so that it will create the thumbnail.
+	Fixes bug #153203
+
 2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* theme-method.c: (vfs_module_init): NULL vs. 0
