@@ -1,3 +1,8 @@
+2005-01-04  Shakti Sen <shprasad@novell.com>
+
+	* configure.in: Defined PREFIX to <prefix> 
+	bug #153203
+	
 2005-01-03  Dan Winship  <danw@novell.com>
 
 	* configure.in: Remove redundant check for ngettext, since
